--- a/src/components/model/model.css
+++ b/src/components/model/model.css
@@ -1,5 +1,5 @@
-.canvas-container {
+.fill-container {
     border: 1px solid black;
-    height: 400px;
-    width: 600px;
+    height: 100%;
+    width: 100%;
 }
