--- a/src/index.css
+++ b/src/index.css
@@ -78,8 +78,8 @@
 html,
 body,
 #root {
-    width: 100%;
-    height: 100%;
+    width: 100dvw !important;
+    height: 100dvh !important;
     margin: 0;
     padding: 0;
     overflow: hidden;
